tests/baselines/reference/jsContainerMergeTsDeclaration.errors.txt
tests/cases/conformance/salsa/a.js(3,3): error TS2339: Property 'a' does not exist on type '() => void'.
tests/cases/conformance/salsa/b.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '() => void', but here has type 'number'.


==== tests/cases/conformance/salsa/a.js (1 errors) ====
    var /*1*/x = function foo() {
    }
    x.a = function bar() {
      ~
!!! error TS2339: Property 'a' does not exist on type '() => void'.
    }
==== tests/cases/conformance/salsa/b.ts (1 errors) ====
    var x = function () {
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '() => void', but here has type 'number'.
!!! related TS6203 tests/cases/conformance/salsa/a.js:1:10: 'x' was also declared here.
        return 1;
    }();
    